go/p2panda_ffi/p2panda_ffi.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V6 in this file.           ⚠️

typedef struct RustBuffer {
	uint64_t capacity;
	uint64_t len;
	uint8_t *data;
} RustBuffer;
typedef struct ForeignBytes {
	int32_t len;
	const uint8_t *data;
} ForeignBytes;
// Error definitions
typedef struct RustCallStatus {
	int8_t code;
	RustBuffer errorBuf;
} RustCallStatus;
typedef void (*UniffiRustFutureContinuationCallback)(uint64_t data, int8_t poll_result);
uint64_t uniffi_p2panda_ffi_fn_clone_cursor(uint64_t handle, RustCallStatus *out_status
);
void uniffi_p2panda_ffi_fn_free_cursor(uint64_t handle, RustCallStatus *out_status
);
uint64_t uniffi_p2panda_ffi_fn_clone_ephemeralmessage(uint64_t handle, RustCallStatus *out_status
);
void uniffi_p2panda_ffi_fn_free_ephemeralmessage(uint64_t handle, RustCallStatus *out_status
);
uint64_t uniffi_p2panda_ffi_fn_clone_ephemeralstream(uint64_t handle, RustCallStatus *out_status
);
void uniffi_p2panda_ffi_fn_free_ephemeralstream(uint64_t handle, RustCallStatus *out_status
);
uint64_t uniffi_p2panda_ffi_fn_clone_ephemeralstreamcallback(uint64_t handle, RustCallStatus *out_status
);
void uniffi_p2panda_ffi_fn_free_ephemeralstreamcallback(uint64_t handle, RustCallStatus *out_status
);
uint64_t uniffi_p2panda_ffi_fn_clone_event(uint64_t handle, RustCallStatus *out_status
);
void uniffi_p2panda_ffi_fn_free_event(uint64_t handle, RustCallStatus *out_status
);
RustBuffer ffi_p2panda_ffi_rustbuffer_alloc(uint64_t size, RustCallStatus *out_status
);
RustBuffer ffi_p2panda_ffi_rustbuffer_from_bytes(ForeignBytes bytes, RustCallStatus *out_status
);
void ffi_p2panda_ffi_rustbuffer_free(RustBuffer buf, RustCallStatus *out_status
);
RustBuffer ffi_p2panda_ffi_rustbuffer_reserve(RustBuffer buf, uint64_t additional, RustCallStatus *out_status
);
void ffi_p2panda_ffi_rust_future_poll_u8(uint64_t handle, UniffiRustFutureContinuationCallback callback, uint64_t callback_data
);
void ffi_p2panda_ffi_rust_future_cancel_u8(uint64_t handle
);
void ffi_p2panda_ffi_rust_future_free_u8(uint64_t handle
);
uint8_t ffi_p2panda_ffi_rust_future_complete_u8(uint64_t handle, RustCallStatus *out_status
);
void ffi_p2panda_ffi_rust_future_poll_i8(uint64_t handle, UniffiRustFutureContinuationCallback callback, uint64_t callback_data
);
void ffi_p2panda_ffi_rust_future_cancel_i8(uint64_t handle
);
void ffi_p2panda_ffi_rust_future_free_i8(uint64_t handle
);
int8_t ffi_p2panda_ffi_rust_future_complete_i8(uint64_t handle, RustCallStatus *out_status
);
void ffi_p2panda_ffi_rust_future_poll_u16(uint64_t handle, UniffiRustFutureContinuationCallback callback, uint64_t callback_data
);
void ffi_p2panda_ffi_rust_future_cancel_u16(uint64_t handle
);
void ffi_p2panda_ffi_rust_future_free_u16(uint64_t handle
);
uint16_t ffi_p2panda_ffi_rust_future_complete_u16(uint64_t handle, RustCallStatus *out_status
);
void ffi_p2panda_ffi_rust_future_poll_i16(uint64_t handle, UniffiRustFutureContinuationCallback callback, uint64_t callback_data
);
void ffi_p2panda_ffi_rust_future_cancel_i16(uint64_t handle
);
void ffi_p2panda_ffi_rust_future_free_i16(uint64_t handle
);
int16_t ffi_p2panda_ffi_rust_future_complete_i16(uint64_t handle, RustCallStatus *out_status
);
void ffi_p2panda_ffi_rust_future_poll_u32(uint64_t handle, UniffiRustFutureContinuationCallback callback, uint64_t callback_data
);
void ffi_p2panda_ffi_rust_future_cancel_u32(uint64_t handle
);
void ffi_p2panda_ffi_rust_future_free_u32(uint64_t handle
);
uint32_t ffi_p2panda_ffi_rust_future_complete_u32(uint64_t handle, RustCallStatus *out_status
);
void ffi_p2panda_ffi_rust_future_poll_i32(uint64_t handle, UniffiRustFutureContinuationCallback callback, uint64_t callback_data
);
void ffi_p2panda_ffi_rust_future_cancel_i32(uint64_t handle
);
void ffi_p2panda_ffi_rust_future_free_i32(uint64_t handle
);
int32_t ffi_p2panda_ffi_rust_future_complete_i32(uint64_t handle, RustCallStatus *out_status
);
void ffi_p2panda_ffi_rust_future_poll_u64(uint64_t handle, UniffiRustFutureContinuationCallback callback, uint64_t callback_data
);
void ffi_p2panda_ffi_rust_future_cancel_u64(uint64_t handle
);
void ffi_p2panda_ffi_rust_future_free_u64(uint64_t handle
);
uint64_t ffi_p2panda_ffi_rust_future_complete_u64(uint64_t handle, RustCallStatus *out_status
);
void ffi_p2panda_ffi_rust_future_poll_i64(uint64_t handle, UniffiRustFutureContinuationCallback callback, uint64_t callback_data
);
void ffi_p2panda_ffi_rust_future_cancel_i64(uint64_t handle
);
void ffi_p2panda_ffi_rust_future_free_i64(uint64_t handle
);
int64_t ffi_p2panda_ffi_rust_future_complete_i64(uint64_t handle, RustCallStatus *out_status
);
void ffi_p2panda_ffi_rust_future_poll_f32(uint64_t handle, UniffiRustFutureContinuationCallback callback, uint64_t callback_data
);
void ffi_p2panda_ffi_rust_future_cancel_f32(uint64_t handle
);
void ffi_p2panda_ffi_rust_future_free_f32(uint64_t handle
);
float ffi_p2panda_ffi_rust_future_complete_f32(uint64_t handle, RustCallStatus *out_status
);
void ffi_p2panda_ffi_rust_future_poll_f64(uint64_t handle, UniffiRustFutureContinuationCallback callback, uint64_t callback_data
);
void ffi_p2panda_ffi_rust_future_cancel_f64(uint64_t handle
);
void ffi_p2panda_ffi_rust_future_free_f64(uint64_t handle
);
double ffi_p2panda_ffi_rust_future_complete_f64(uint64_t handle, RustCallStatus *out_status
);
void ffi_p2panda_ffi_rust_future_poll_rust_buffer(uint64_t handle, UniffiRustFutureContinuationCallback callback, uint64_t callback_data
);
void ffi_p2panda_ffi_rust_future_cancel_rust_buffer(uint64_t handle
);
void ffi_p2panda_ffi_rust_future_free_rust_buffer(uint64_t handle
);
RustBuffer ffi_p2panda_ffi_rust_future_complete_rust_buffer(uint64_t handle, RustCallStatus *out_status
);
void ffi_p2panda_ffi_rust_future_poll_void(uint64_t handle, UniffiRustFutureContinuationCallback callback, uint64_t callback_data
);
void ffi_p2panda_ffi_rust_future_cancel_void(uint64_t handle
);
void ffi_p2panda_ffi_rust_future_free_void(uint64_t handle
);
void ffi_p2panda_ffi_rust_future_complete_void(uint64_t handle, RustCallStatus *out_status
);